--- a/template.Rmd
+++ b/template.Rmd
@@ -3,4 +3,17 @@ title: "Data Import"
 output: github_document
 ---
 
+```{r, echo = FALSE}
+library(tidyverse)
+```
+
+
 ## Data Imports: CSVs
+
+Let's import data using the 'readr' package
+
+```{r}
+litters_df = read_csv("data_import_examples/FAS_litters.csv")
+litters_df = janitor::clean_names(litters_df)
+```
+
